Fix centering on mobile devices

--- a/src/pages/home-page/sign-up-bar/sign-up-bar.sass
+++ b/src/pages/home-page/sign-up-bar/sign-up-bar.sass
@@ -1,6 +1,3 @@
-$break-large: 1200px
-$break-small: 425px
-
 klatsch-sign-up-bar
   label
     color: white
