--- a/src/pages/home-page/tag-line/tag-line.sass
+++ b/src/pages/home-page/tag-line/tag-line.sass
@@ -1,9 +1,11 @@
 klatsch-tag-line
-    position: relative
-    top: 90px
-    text-align: center
-    display: inherit
-    width: 82%
-    color: snow
-    font-size: 40px
-    font-weight: 900
+  position: relative
+  top: 90px
+  text-align: center
+  display: inherit
+  width: 82%
+  color: snow
+  font-size: 40px
+  font-weight: 900
+  @media screen and (max-width: $break-small)
+    width: 100%
